# stackMachine

./: AddData.cpp  AddData.h  CMakeLists.txt  Data.cpp  Data.h  DivData.cpp  DivData.h  EndProgram.cpp  EndProgram.h  Instruction.cpp  Instruction.h  MulData.cpp  MulData.h  PrintData.cpp  PrintData.h  Program.cpp  Program.h  PushData.cpp  PushData.h  StackMachine.cpp  StackMachine.h  SubData.cpp  SubData.h  main.cpp  run.sh
